[project]
name = "sourmash_plugin_venn"
description = "sourmash plugin to build venn diagrams."
readme = "README.md"
requires-python = ">=3.8"
version = "0.3"

dependencies = ["sourmash>=4.8.0,<5", "matplotlib", "matplotlib_venn"]

[metadata]
license = { text = "BSD 3-Clause License" }

[project.entry-points."sourmash.cli_script"]
sketchall = "sourmash_plugin_venn:Command_Venn"
